--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   <link rel="stylesheet" type="text/css" href="css/global.css" />
 </head>
 <body>
-  <!-- Content goes here. -->
+<h1>Yo!</h1>
+<div class="container">
+
+</div>
+
 
   <!-- Scripts go here. -->
   <script type="text/javascript" src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch"></script>
-  <script type="text/javascript" src="control-flow.js"></script>
+  <script type="text/javascript" src="js/calc.js"></script>
 </body>
 </html>
